--- a/index.html
+++ b/index.html
@@ -748,6 +748,28 @@ int idx = (r << 2) + (g << 1) + b;
                         <div style="width: 50px; height: 21px; float: left; margin-right: 5px; margin-bottom: 5px; background: #728a0c; color: #fff; font-size: 12px; text-align: center; padding-top: 9px;">1</div>
                     </div>
                 </section>
+
+                <section>
+                    <img src="assets/demo3.jpeg" />
+                    <div class="demo-color-wrapper">
+
+                        <div style="width: 50px; height: 21px; float: left; margin-right: 5px; margin-bottom: 5px; background: #3B183B; color: #fff; font-size: 12px; text-align: center; padding-top: 9px;">418085</div>
+                        <div style="width: 50px; height: 21px; float: left; margin-right: 5px; margin-bottom: 5px; background: #BB3358; color: #fff; font-size: 12px; text-align: center; padding-top: 9px;">113167</div>
+                        <div style="width: 50px; height: 21px; float: left; margin-right: 5px; margin-bottom: 5px; background: #C8B162; color: #fff; font-size: 12px; text-align: center; padding-top: 9px;">54826</div>
+                        <div style="width: 50px; height: 21px; float: left; margin-right: 5px; margin-bottom: 5px; background: #51B75A; color: #fff; font-size: 12px; text-align: center; padding-top: 9px;">38801</div>
+                        <div style="width: 50px; height: 21px; float: left; margin-right: 5px; margin-bottom: 5px; background: #E1D89D; color: #fff; font-size: 12px; text-align: center; padding-top: 9px;">30649</div>
+                        <div style="width: 50px; height: 21px; float: left; margin-right: 5px; margin-bottom: 5px; background: #EEECD7; color: #fff; font-size: 12px; text-align: center; padding-top: 9px;">26666</div>
+                        <div style="width: 50px; height: 21px; float: left; margin-right: 5px; margin-bottom: 5px; background: #BE3E98; color: #fff; font-size: 12px; text-align: center; padding-top: 9px;">26149</div>
+                        <div style="width: 50px; height: 21px; float: left; margin-right: 5px; margin-bottom: 5px; background: #484099; color: #fff; font-size: 12px; text-align: center; padding-top: 9px;">22178</div>
+                        <div style="width: 50px; height: 21px; float: left; margin-right: 5px; margin-bottom: 5px; background: #4FB2A1; color: #fff; font-size: 12px; text-align: center; padding-top: 9px;">19972</div>
+                        <div style="width: 50px; height: 21px; float: left; margin-right: 5px; margin-bottom: 5px; background: #DDA598; color: #fff; font-size: 12px; text-align: center; padding-top: 9px;">19091</div>
+                        <div style="width: 50px; height: 21px; float: left; margin-right: 5px; margin-bottom: 5px; background: #A0A591; color: #fff; font-size: 12px; text-align: center; padding-top: 9px;">6571</div>
+                        <div style="width: 50px; height: 21px; float: left; margin-right: 5px; margin-bottom: 5px; background: #A1DB9B; color: #fff; font-size: 12px; text-align: center; padding-top: 9px;">5031</div>
+                        <div style="width: 50px; height: 21px; float: left; margin-right: 5px; margin-bottom: 5px; background: #E0AFC8; color: #fff; font-size: 12px; text-align: center; padding-top: 9px;">2443</div>
+                        <div style="width: 50px; height: 21px; float: left; margin-right: 5px; margin-bottom: 5px; background: #989ECF; color: #fff; font-size: 12px; text-align: center; padding-top: 9px;">1537</div>
+                        <div style="width: 50px; height: 21px; float: left; margin-right: 5px; margin-bottom: 5px; background: #A5DDD1; color: #fff; font-size: 12px; text-align: center; padding-top: 9px;">1266</div>
+                    </div>
+                </section>
             </section>
 
             <section>
